# auction

./: alembic.ini  pyproject.toml
back/: server.py  settings.py
back/auction/: dataclasses.py  models.py  views.py  watcher.py
back/auth/: dataclasses.py  depends.py  views.py
back/db_utils/: __init__.py
back/migrations/: env.py  script.py.mako
back/migrations/versions/: cb5414bd2ba6_first_migration.py
back/user/: models.py
