[tool.poetry]
name = "auction"
version = "0.1.0"
description = ""
authors = ["linar"]

[tool.poetry.dependencies]
python = "^3.8"
python-jose = "^3.2.0"
passlib = "^1.7.4"
bcrypt = "^3.2.0"
redis = "^3.5.3"
aioredis = "^1.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
